# kenya-power-pdf-extract

./: Cargo.toml  README.md
output/: output_kenya_power.pdf.txt  output_kenya_power_latest.pdf.txt
src/: lib.rs  main.rs
