[package]
name = "pdf_extract"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
lazy_static = "1.4.0"
pdf-extract = "0.6.4"
regex = "1.6.0"
serde = {version =  "1.0.139", features = ["derive"]}
serde_json = "1.0.82"
